# ar-reconciliation-ai-assistant

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
ar_reconciliation/: __init__.py  ai_notes.py  cli.py  config.py  core.py  matching.py  report.py  risk.py  validation.py
data/: sample_invoices.csv  sample_receipts.csv
docs/: architecture.md  data_dictionary.md  interview_talking_points.md
tests/: test_core.py
