[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ar-reconciliation-ai-assistant"
version = "0.2.0"
description = "Accounts receivable reconciliation, aging analysis, exception queue, and AI-assisted review notes."
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.0",
  "openpyxl>=3.1",
  "streamlit>=1.35",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["ar_reconciliation*"]
